fixed issue with icon alignment

--- a/src/index.css
+++ b/src/index.css
@@ -93,6 +93,8 @@
     padding: 10px 20px 10px 10px;
     line-height: 1;
     height: auto;
+    min-width: 75px;
+    text-align: center;
     width: auto;
   }
 
